--- a/package.json
+++ b/package.json
@@ -14,31 +14,37 @@
   "dependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-essentials": "^8.2.5",
+    "@storybook/addon-interactions": "^8.2.5",
+    "@storybook/addon-links": "^8.2.5",
+    "@storybook/addon-onboarding": "^8.2.5",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/addon-themes": "^8.2.5",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
+    "@storybook/blocks": "^8.2.5",
+    "@storybook/builder-webpack5": "^8.2.5",
+    "@storybook/react": "^8.2.5",
+    "@storybook/react-webpack5": "^8.2.5",
+    "@storybook/test": "^8.2.5",
+    "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
     "daisyui": "^4.12.10",
     "postcss": "^8.4.39",
     "postcss-loader": "^8.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.3"
-  },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
-    "@storybook/addon-actions": "^8.2.5",
-    "@storybook/addon-essentials": "^8.2.5",
-    "@storybook/addon-interactions": "^8.2.5",
-    "@storybook/addon-links": "^8.2.5",
-    "@storybook/addon-onboarding": "^8.2.5",
-    "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
-    "@storybook/blocks": "^8.2.5",
-    "@storybook/react": "^8.2.5",
-    "@storybook/react-webpack5": "^8.2.5",
-    "@storybook/test": "^8.2.5",
     "rollup": "^4.18.1",
     "rollup-plugin-typescript2": "^0.36.0",
-    "storybook": "^8.2.5"
+    "storybook": "^8.2.5",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.6",
+    "ts-loader": "^9.5.1"
   }
 }
