--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atomic-sdk",
+  "name": "@3um-Group/Atomic-SDK",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "repository": {
+    "url": "git://github.com/3um-Group/Atomic-SDK.git"
+  },
   "dependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
