--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
+    "react-daisyui": "^5.0.0",
     "react-dom": "^18.3.1",
     "typescript": "^5.5.3"
   },
