added autodocs in storybook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "declaration": true,
-      "outDir": "./dist"
+      "outDir": "./dist",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true
     },
     "include": ["src"]
   }
