--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "git://github.com/3um-Group/Atomic-SDK.git"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
