--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,8 @@
 ---
-on.push.branches: ["main"]
+on:
+  push:
+    branches:
+     - "main"
 
 permissions:
   contents: read
@@ -11,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: build-publish-storybook
-        with.path: build
+        with:
+          path: build
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
 ...
