--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,6 @@
 ---
+name: Build and Publish Storybook to GitHub Pages
+
 on:
   push:
     branches:
@@ -13,8 +15,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
+          
       - id: build-publish-storybook
         with:
           path: build
+          checkout: false
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
 ...
