--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,15 +15,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-          
       - id: build-publish-storybook
         with:
-          path: build
-          checkout: false
+          path: storybook-static
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
 ...
