--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,6 @@
 ---
+name: Build and Publish Storybook to GitHub Pages
+
 on:
   push:
     branches:
@@ -15,6 +17,6 @@ jobs:
     steps:
       - id: build-publish-storybook
         with:
-          path: build
+          path: storybook-static
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
 ...
