--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@3um-Group/Atomic-SDK",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "@3um-Group/atomic-sdk",
+  "version": "1.0.1",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +44,7 @@
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
     "daisyui": "^4.12.10",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.39",
     "postcss-loader": "^8.1.1",
     "rollup": "^4.18.1",
@@ -50,6 +52,9 @@
     "storybook": "^8.2.5",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.6",
-    "ts-loader": "^9.5.1"
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
