--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-actions": "^8.2.7",
     "@storybook/addon-essentials": "^8.2.5",
     "@storybook/addon-interactions": "^8.2.5",
     "@storybook/addon-links": "^8.2.5",
@@ -40,7 +41,7 @@
     "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
     "@storybook/blocks": "^8.2.5",
     "@storybook/builder-webpack5": "^8.2.5",
-    "@storybook/react": "^8.2.5",
+    "@storybook/react": "^8.2.7",
     "@storybook/react-webpack5": "^8.2.5",
     "@storybook/test": "^8.2.5",
     "@types/webpack": "^5.28.5",
