--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
+      "allowSyntheticDefaultImports": true,
       "declaration": true,
       "outDir": "./dist",
       "emitDecoratorMetadata": true,
