--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@3um-Group/atomic-sdk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
     "@storybook/addon-actions": "^8.2.7",
+    "@storybook/addon-docs": "^8.2.8",
     "@storybook/addon-essentials": "^8.2.5",
     "@storybook/addon-interactions": "^8.2.5",
     "@storybook/addon-links": "^8.2.5",
