--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
     "@storybook/blocks": "^8.2.5",
     "@storybook/builder-webpack5": "^8.2.5",
+    "@storybook/manager-api": "^8.2.8",
     "@storybook/react": "^8.2.7",
     "@storybook/react-webpack5": "^8.2.5",
     "@storybook/test": "^8.2.5",
+    "@storybook/theming": "^8.2.8",
     "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
