--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@3um-Group/atomic-sdk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
     "@storybook/addon-actions": "^8.2.7",
+    "@storybook/addon-docs": "^8.2.8",
     "@storybook/addon-essentials": "^8.2.5",
     "@storybook/addon-interactions": "^8.2.5",
     "@storybook/addon-links": "^8.2.5",
@@ -41,9 +42,11 @@
     "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
     "@storybook/blocks": "^8.2.5",
     "@storybook/builder-webpack5": "^8.2.5",
+    "@storybook/manager-api": "^8.2.8",
     "@storybook/react": "^8.2.7",
     "@storybook/react-webpack5": "^8.2.5",
     "@storybook/test": "^8.2.5",
+    "@storybook/theming": "^8.2.8",
     "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
