--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "dayjs": "^1.11.13",
     "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "react": "^18.3.1",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
@@ -49,6 +51,7 @@
     "@storybook/react-webpack5": "^8.3.1",
     "@storybook/test": "^8.3.1",
     "@storybook/theming": "^8.3.1",
+    "@types/recharts": "^1.8.29",
     "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
