--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@3um-group/atomic-sdk",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,12 +20,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
+    "chart.js": "^4.4.4",
     "dayjs": "^1.11.13",
     "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
@@ -51,6 +51,8 @@
     "@storybook/react-webpack5": "^8.3.1",
     "@storybook/test": "^8.3.1",
     "@storybook/theming": "^8.3.1",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
     "@types/recharts": "^1.8.29",
     "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.19",
@@ -69,4 +71,5 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   }
+  
 }
